--- a/Frontend/public/area_privata.html
+++ b/Frontend/public/area_privata.html
@@ -12,8 +12,12 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Fonts -->
-    <link rel="stylesheet" href="assets/css/fonts.css"> <!-- Design System Master (PROTOCOLLO BASE V3.3) -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=3.3"> <!-- CORE JS -->
+    <!-- Fonts -->
+    <link rel="stylesheet" href="assets/css/core_fonts.css">
+    <!-- Design System Master (PROTOCOLLO V5.0) -->
+    <link rel="stylesheet" href="assets/css/core.css?v=5.0">
+    <link rel="stylesheet" href="assets/css/core_fascie.css">
+    <link rel="stylesheet" href="assets/css/dashboard.css?v=5.0">
     <script src="assets/js/core.js"></script>
     <script type="module" src="assets/js/ui-core.js"></script>
 </head>
@@ -121,7 +125,8 @@
                                     CONTATTO</button>
                             </div>
                             <div id="contacts-list" class="flex flex-col gap-2 max-w-full overflow-hidden">
-                                <!-- JS Generated --> </div>
+                                <!-- JS Generated -->
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -135,5 +140,3 @@
 </body>
 
 </html>
-
-
