--- a/Frontend/public/dati_azienda.html
+++ b/Frontend/public/dati_azienda.html
@@ -17,9 +17,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- Fonts -->
-    <link rel="stylesheet" href="assets/css/fonts.css?v=5.4">
-    <!-- Design System Master (PROTOCOLLO OPERATORE V5.4) -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=5.4.1">
+    <!-- Fonts -->
+    <link rel="stylesheet" href="assets/css/core_fonts.css">
+    <!-- Design System Master (PROTOCOLLO V5.0) -->
+    <link rel="stylesheet" href="assets/css/core.css?v=5.0">
+    <link rel="stylesheet" href="assets/css/core_fascie.css">
+    <link rel="stylesheet" href="assets/css/core_moduli.css?v=5.0">
 
     <!-- CORE JS -->
     <script src="assets/js/core.js"></script>
