--- a/Frontend/public/dettaglio_scadenza.html
+++ b/Frontend/public/dettaglio_scadenza.html
@@ -20,12 +20,11 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- CSS Modular System V3.9 -->
-    <link rel="stylesheet" href="assets/css/core.css?v=3.9">
+    <link rel="stylesheet" href="assets/css/core.css?v=5.0">
     <link rel="stylesheet" href="assets/css/core_fonts.css">
     <link rel="stylesheet" href="assets/css/core_fascie.css">
-    <link rel="stylesheet" href="assets/css/core_pagine.css?v=1.0">
-    <link rel="stylesheet" href="assets/css/core_moduli.css?v=1.0">
-    <link rel="stylesheet" href="assets/css/scadenze.css?v=1.1">
+    <link rel="stylesheet" href="assets/css/core_moduli.css?v=5.0">
+    <link rel="stylesheet" href="assets/css/scadenze.css?v=5.0">
 
     <!-- CORE JS -->
     <script src="assets/js/core.js"></script>
@@ -111,6 +110,15 @@
                         <h3 class="detail-section-title" data-t="recipients">Destinatari Invio</h3>
                     </div>
                     <div id="display-destinatari" class="detail-list-group"></div>
+                </div>
+
+                <!-- Notifiche Section -->
+                <div id="display-notifications-wrapper" class="detail-section">
+                    <div class="detail-section-header">
+                        <span class="material-symbols-outlined icon-emerald">notifications_active</span>
+                        <h3 class="detail-section-title">Canali di Notifica</h3>
+                    </div>
+                    <div id="display-notifications" class="detail-list-group"></div>
                 </div>
 
                 <!-- Allegati Section -->
