--- a/Frontend/public/imposta_nuova_password.html
+++ b/Frontend/public/imposta_nuova_password.html
@@ -21,10 +21,11 @@
 
 
 
-    <!-- Fonts -->
+    <!-- 2. Core (Fonts & Protocollo Base V5.0) -->
     <link rel="stylesheet" href="assets/css/core_fonts.css">
-    <!-- Design System Master (PROTOCOLLO BASE V3.8) -->
-    <link rel="stylesheet" href="assets/css/core.css?v=3.8">
+    <link rel="stylesheet" href="assets/css/core.css?v=5.0">
+    <!-- 3. Stili Specifici Auth -->
+    <link rel="stylesheet" href="assets/css/accesso.css?v=5.0">
 </head>
 
 <body class="base-bg">
