--- a/Frontend/public/account_azienda.html
+++ b/Frontend/public/account_azienda.html
@@ -12,8 +12,12 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Fonts -->
-    <link rel="stylesheet" href="assets/css/fonts.css?v=3.4"> <!-- Design System Master (PROTOCOLLO BASE V3.4) -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=3.4"> <!-- CORE JS -->
+    <!-- Fonts -->
+    <link rel="stylesheet" href="assets/css/core_fonts.css">
+    <!-- Design System Master (PROTOCOLLO V5.0) -->
+    <link rel="stylesheet" href="assets/css/core.css?v=5.0">
+    <link rel="stylesheet" href="assets/css/core_fascie.css">
+    <link rel="stylesheet" href="assets/css/core_moduli.css?v=5.0">
     <script src="assets/js/core.js"></script>
     <script type="module" src="assets/js/ui-core.js"></script>
 </head>
@@ -45,5 +49,3 @@
 </body>
 
 </html>
-
-
