--- a/Frontend/public/configurazione_automezzi.html
+++ b/Frontend/public/configurazione_automezzi.html
@@ -20,11 +20,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- CSS Modular System V3.9 -->
-    <link rel="stylesheet" href="assets/css/core.css?v=3.9">
+    <link rel="stylesheet" href="assets/css/core.css?v=5.0">
     <link rel="stylesheet" href="assets/css/core_fonts.css">
     <link rel="stylesheet" href="assets/css/core_fascie.css">
-    <link rel="stylesheet" href="assets/css/core_pagine.css?v=1.0">
-    <link rel="stylesheet" href="assets/css/core_moduli.css?v=1.0">
+    <link rel="stylesheet" href="assets/css/core_moduli.css?v=5.0">
 
     <!-- CORE JS -->
     <script src="assets/js/core.js"></script>
@@ -60,8 +59,8 @@
                             <div class="settings-item-info">
                                 <h3 class="settings-label" data-t="section_email_subject">Oggetti Email</h3>
                             </div>
-                            <div class="flex items-center gap-2">
-                                <button type="button" id="btn-add-type" class="btn-manage-account-semantic">
+                            <div class="settings-header-actions">
+                                <button type="button" id="btn-add-type" class="btn-icon-add">
                                     <span class="material-symbols-outlined">add</span>
                                 </button>
                                 <span class="material-symbols-outlined arrow-icon">expand_more</span>
