--- a/Frontend/public/form_account_privato.html
+++ b/Frontend/public/form_account_privato.html
@@ -17,9 +17,12 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
     <!-- Fonts -->
-    <link rel="stylesheet" href="assets/css/fonts.css?v=3.6">
-    <!-- Design System Master (PROTOCOLLO BASE V3.6) -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=3.6">
+    <!-- Fonts -->
+    <link rel="stylesheet" href="assets/css/core_fonts.css">
+    <!-- Design System Master (PROTOCOLLO V5.0) -->
+    <link rel="stylesheet" href="assets/css/core.css?v=5.0">
+    <link rel="stylesheet" href="assets/css/core_fascie.css">
+    <link rel="stylesheet" href="assets/css/core_moduli.css?v=5.0">
 
     <!-- CORE JS -->
     <script src="assets/js/core.js"></script>
