--- a/Frontend/public/impostazioni.html
+++ b/Frontend/public/impostazioni.html
@@ -22,13 +22,16 @@
 
     <!-- CSS Modular System V3.9 -->
     <!-- 1. Core System -->
-    <link rel="stylesheet" href="assets/css/core.css?v=3.9">
+    <link rel="stylesheet" href="assets/css/core.css?v=5.0">
     <!-- 2. Fonts -->
     <link rel="stylesheet" href="assets/css/core_fonts.css">
     <!-- 3. Fascie (Header & Footer) -->
     <link rel="stylesheet" href="assets/css/core_fascie.css">
     <!-- 4. Shared Library -->
-    <link rel="stylesheet" href="assets/css/core_pagine.css?v=1.0">
+    <!-- 4. Modular Shared Components -->
+    <link rel="stylesheet" href="assets/css/core_moduli.css?v=5.0">
+    <!-- 5. Specific Page Style -->
+    <link rel="stylesheet" href="assets/css/impostazioni.css?v=5.0">
 
     <!-- CORE JS -->
     <script src="assets/js/core.js"></script>
@@ -164,6 +167,16 @@
                                 <span class="material-symbols-outlined">archive</span>
                             </div>
                             <span class="settings-label" data-t="account_archive">Archivio Account</span>
+                        </div>
+                        <span class="material-symbols-outlined text-secondary arrow-icon">chevron_right</span>
+                    </button>
+
+                    <button class="settings-item group" id="btn-notifications-history">
+                        <div class="row-layout">
+                            <div class="settings-icon-box icon-blue">
+                                <span class="material-symbols-outlined">notifications</span>
+                            </div>
+                            <span class="settings-label" data-t="notifications_history_title">Storico Notifiche</span>
                         </div>
                         <span class="material-symbols-outlined text-secondary arrow-icon">chevron_right</span>
                     </button>
