--- a/Frontend/public/modifica_account_azienda.html
+++ b/Frontend/public/modifica_account_azienda.html
@@ -13,8 +13,12 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <!-- Fonts -->
-    <link rel="stylesheet" href="assets/css/fonts.css"> <!-- Design System Master (PROTOCOLLO BASE V3.6) -->
-    <link rel="stylesheet" href="assets/css/operatore.css?v=3.6"> <!-- CORE JS -->
+    <!-- Fonts -->
+    <link rel="stylesheet" href="assets/css/core_fonts.css">
+    <!-- Design System Master (PROTOCOLLO V5.0) -->
+    <link rel="stylesheet" href="assets/css/core.css?v=5.0">
+    <link rel="stylesheet" href="assets/css/core_fascie.css">
+    <link rel="stylesheet" href="assets/css/core_moduli.css?v=5.0">
     <script src="assets/js/core.js"></script>
     <script type="module" src="assets/js/ui-core.js"></script>
 </head>
