--- a/Frontend/public/reset_password.html
+++ b/Frontend/public/reset_password.html
@@ -21,10 +21,11 @@
 
 
 
-    <!-- 2. Core (Fonts & Protocollo Base V3.9) -->
+    <!-- 2. Core (Fonts & Protocollo Base V5.0) -->
     <link rel="stylesheet" href="assets/css/core_fonts.css">
-    <link rel="stylesheet" href="assets/css/core.css?v=3.9">
-    <link rel="stylesheet" href="assets/css/core_fascie.css">
+    <link rel="stylesheet" href="assets/css/core.css?v=5.0">
+    <!-- 3. Stili Specifici Auth -->
+    <link rel="stylesheet" href="assets/css/accesso.css?v=5.0">
 </head>
 
 <body class="base-bg">
